# pds-rag-pipelines

./: .gitignore  README.md  gpt3.5-pds_labelled_rag_dataset.json  pds_labelled_rag_dataset.json  pyproject.toml  rag.ipynb
