[tool.poetry]
name = "minh-rag-pipeline"
version = "0.1.0"
description = "Minh's RAG pipeline for PDS files in PDF format."
authors = ["Minh Luu <PyGeek03@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.4.1.post1"
transformers = "^4.39.3"
llmsherpa = "^0.1.4"
llama-index = "^0.10.27"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-embeddings-gemini = "^0.1.6"
llama-index-llms-ollama = "^0.1.2"
ipykernel = "^6.29.4"
llama-index-llms-gemini = "^0.1.7"
traceloop-sdk = "^0.15.11"
llama-index-vector-stores-duckdb = "0.1.1"
anthropic = "^0.23.1"
llama-index-llms-anthropic = "^0.1.9"
langchain = "^0.1.14"
unstructured = "^0.13.2"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
pillow-heif = "^0.16.0"
opencv-python = "^4.9.0.80"
pikepdf = "^8.15.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
