[tool.poetry]
name = "minh-rag-pipeline"
version = "0.1.0"
description = "Minh's RAG pipeline for PDS files in PDF format."
authors = ["Minh Luu <PyGeek03@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transformers = "^4.39.3"
llmsherpa = "^0.1.4"
llama-index = "^0.10.27"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-embeddings-gemini = "^0.1.6"
llama-index-llms-anthropic = "^0.1.9"
llama-index-llms-ollama = "^0.1.2"
llama-index-llms-gemini = "^0.1.7"
llama-index-vector-stores-duckdb = "0.1.1"
ipykernel = "^6.29.4"
traceloop-sdk = "^0.15.11"
anthropic = "^0.23.1"
langchain = "^0.1.14"
unstructured = {extras = ["pdf"], version = "^0.13.2"}
python-dotenv = "^1.0.1"
llama-index-llms-openai = "^0.1.14"
spacy = "^3.7.4"
deepeval = "0.21"
ipywidgets = "^8.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
